--- a/PSU_GEOG_489/L3/Employee Trips Tracker-Extra.ipynb
+++ b/PSU_GEOG_489/L3/Employee Trips Tracker-Extra.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "4  Samulson, Roger  3981232"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "0                                Boston;Philadelphia  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
        "4  Portland;Boston;Bangor;Washington;Harrisburg;P...  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,17 +996,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\blcrosbie\\dev\\GIS\\PSU_GEOG_489\\L3\\results\\employee_trips_blc72.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "duration_filtered_df = my_trips_df.copy()\n",
     "duration_filtered_df = duration_filtered_df[\\\n",
@@ -1017,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1172,7 @@
        "4  POINT (-70.19406 44.10972)  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1312,7 @@
        "4  LineString (-70.27758484016806 43.698554552950...  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1563,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1633,7 @@
        "<Item title:\"employee_trips_blc72\" type:Feature Layer Collection owner:blc72_pennstate>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1652,12 +1644,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "myMap = gis.map('Pennsylvania')\n",
     "myMap.add_layer(my_output_shape_BLC, {})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "32f50633625449e2ac2d7ee7ba004e1a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MapView(layout=Layout(height='400px', width='100%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-static-img-preview-81da1c16-c841-4e4b-8882-950d8e5101d3\"><img src=\"\"></img></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myMap"
    ]
   },
   {
@@ -1677,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1756,13 +1784,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "378e8b1ca63f43f0a93f70c09bc24f37",
+       "model_id": "32f50633625449e2ac2d7ee7ba004e1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1776,7 +1804,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-04d523ca-203b-4fa9-94b2-957836d45b77\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-81da1c16-c841-4e4b-8882-950d8e5101d3\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1793,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1856,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +2022,7 @@
        "2                                               46.0          "
       ]
      },
-     "execution_count": 212,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2009,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
